# obsidian-confluence

./: Doc.md  README.md  environment.yml  get_staged_changes.sh  project-export.sh  setup_freecad_env.sh
backend/: conftest.py  pytest.ini  test_freecad.py  test_freecad_detailed.py
backend/cad_engine/: conversion.py
backend/cad_engine/cpp/: CMakeLists.txt
backend/cad_engine/cpp/bindings/: CMakeLists.txt  geometry_bindings.cpp
backend/cad_engine/cpp/include/: geometry_converter.hpp
backend/cad_engine/cpp/src/: geometry_converter.cpp
backend/cad_engine/tests/: test_conversion.py
backend/core/: admin.py  cpp_extensions.py  setup.py
backend/core/migrations/: 0007_connection_connection_prevent_duplicate_connections.py  0008_remove_connection_prevent_duplicate_connections_and_more.py
backend/core/models/: component.py  connection.py  parameter.py
backend/core/tests/: __init__.py
backend/eurotempl/: settings.py
backend/geometry/: __init__.py  build.sh  cad_kernel.py  cad_model.py  conversion_algorithms.py  models.py  parametric_library.py  setup.py  spatial_data.py
backend/geometry/core/cpp_extensions/: CMakeLists.txt  __init__.py
backend/geometry/core/cpp_extensions/src/: cgal_converter.cpp  cgal_parametric.cpp
backend/geometry/migrations/: 0001_initial.py  0002_alter_geometrystore_geometry.py
backend/geometry/tests/: conftest.py  test_cad_model.py  test_conversion_algorithms.py  test_data.py  test_parametric_library.py  test_spatial_data.py
backend/parameters/: CMakeLists.txt
backend/parameters/core/cpp_extensions/: __init__.py  _cpp.py  _parameter_graph.py
backend/parameters/core/interfaces/: __init__.py  parameter_constraint.py  parameter_manager.py  parametric_value.py
backend/parameters/cpp/: CMakeLists.txt
backend/parameters/cpp/bindings/: CMakeLists.txt  parameter_bindings.cpp
backend/parameters/cpp/include/: parameter_graph.hpp
backend/parameters/cpp/src/: parameter_graph.cpp
backend/parameters/tests/: conftest.py  test_parameter_manager.py  test_unit_converter.py
backend/parameters/utils/: __init__.py  unit_converter.py
scripts/: install_dependencies.sh
